--- a/Final-Exam-3-Html-Css/index.html
+++ b/Final-Exam-3-Html-Css/index.html
@@ -8,11 +8,20 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="background">
-    <section class="section1"></section>
-    <section class="section2"></section>
-    <section class="section3"></section>
-    
+  
+  <div class="box">
+    <div class="box_test"></div>
+    <div class="box_test2"></div>
+
+    <div class="box_test3">
+      <div class="line_green"></div>
+    </div>
+    <div class="box_test4">
+      
+    </div>
+  </div>
+  
+  
   </div>
 </body>
 </html>
